Make files changed to handle mixed builds bithout problems

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,7 @@ INSTALL_DIR = /usr/bin/install -c -d
 PROJ_SUBDIRS=@PROJ_SUBDIRS@
 
 all:
-	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE)); done
+	@for d in $(PROJ_SUBDIRS); do (echo && echo && cd $$d && $(MAKE)); done
 
 clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
