--- a/src/vscp/drivers/level2/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level2/logger/linux/Makefile.in
@@ -32,11 +32,31 @@ DLLPREFIX = lib
 
 ### Variables: ###
 
-WX_RELEASE = 2.6
+WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPL2LOGGER_OBJECTS =  ../common/log.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../../common/net_skeleton.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
-PROJOBJS = ../common/log.o ../../../../../common/crc.o ../../../../../common/crc8.o  ../../../../../common/net_skeleton.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+VSCPL2LOGGER_OBJECTS =  ../common/log.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
+
+PROJOBJS = ../common/log.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
+
+ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
 
 ### Targets: ###
 
@@ -71,10 +91,14 @@ test:  test.o $(PROJOBJS)
 %.so: %.o $(VSCPL2LOGGER_OBJECTS)
 	$(CXX) -o $@ vscpl2_loggerdrv.o $(VSCPL2LOGGER_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
+$(ALWAYS_BUILD):  .FORCE
+
+.FORCE: 
+
 # Include dependency info, if present:
 -include .deps/*.d
 
-.PHONY: all install uninstall clean distclean data
+.PHONY: all install uninstall clean distclean data .FORCE
 
 
 
