--- a/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
@@ -32,13 +32,40 @@ DLLPREFIX = lib
 
 ### Variables: ###
 
-WX_RELEASE = 2.6
+WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-RAWETH_OBJECTS = rawethernet.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../../common/net_skeleton.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
-PROJOBJS =  rawethernet.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../../common/net_skeleton.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+RAWETH_OBJECTS = rawethernet.o\
+	../../../../../common/net_skeleton.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
 
 
+PROJOBJS =  rawethernet.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
+
+PROJOBJS =  rawethernet.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
+
+ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/net_skeleton.o
 
 ### Targets: ###
 
@@ -72,10 +99,14 @@ test:  test.o $(PROJOBJS)
 %.so: %.o $(RAWETH_OBJECTS)
 	$(CXX) -o $@ vscp2drv_raweth.o $(RAWETH_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
+$(ALWAYS_BUILD):  .FORCE
+
+.FORCE: 
+
 # Include dependency info, if present:
 -include .deps/*.d
 
-.PHONY: all install uninstall clean distclean data
+.PHONY: all install uninstall clean distclean data .FORCE
 
 
 
