--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -33,9 +33,26 @@ DESTDIR =
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-CANCMD_OBJECTS =  \
-	vscpcmd.o ../common/vscpremotetcpif.o  ../common/vscphelper.o ../../common/crc.o ../../common/crc8.o ../common/guid.o ../../common/net_skeleton.o  ../../common/slre.o ../../common/frozen.o ../../common/v7.o
+CANCMD_OBJECTS =  vscpcmd.o\
+	../common/vscpremotetcpif.o\
+	../common/vscphelper.o\
+	../../common/crc.o\
+	../../common/crc8.o\
+	../common/guid.o\
+	../../common/net_skeleton.o\
+	../../common/slre.o\
+	../../common/frozen.o\
+	../../common/v7.o
 
+ALWAYS_BUILD = ../common/vscpremotetcpif.o\
+	../common/vscphelper.o\
+	../common/guid.o\
+	../../common/crc.o\
+	../../common/crc8.o\
+	../../common/net_skeleton.o\
+	../../common/slre.o\
+	../../common/frozen.o\
+	../../common/v7.o
 
 ### Targets: ###
 
@@ -60,10 +77,12 @@ distclean: clean
 vscpcmd: $(CANCMD_OBJECTS)
 	$(CXX) -o $@ $(CANCMD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
 	
+$(ALWAYS_BUILD):  .FORCE
 
+.FORCE: 
 
 # Include dependency info, if present:
 -include .deps/*.d
 
-.PHONY: all install uninstall clean distclean data
+.PHONY: all install uninstall clean distclean data .FORCE
 
