--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,7 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_DIR = /usr/bin/install -c -d
 PROJ_SUBDIRS=@PROJ_SUBDIRS@
+IPADDRESS :=  $(shell hostname -I)
 
 all:
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
@@ -16,8 +17,9 @@ clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
 
 install:
-	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) install); done
-	lsb_release -i
+#	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
+#	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
+#	lsb_release -i
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
@@ -30,14 +32,38 @@ install:
 	mkdir -p /etc/vscp
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
-#	$(INSTALL_PROGRAM) -b -m744 config_examples/web/index.html /srv/vscp/web/
-#	$(INSTALL_PROGRAM) -b -m744 -D config_examples/web/* /srv/vscp/web/
-	cp -r config_examples/web/* /srv/vscp/web/
-	#$(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml
-	#$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /srv/vscp/variables.xml
-	#$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /srv/vscp/dm.xml
-#	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-	cp -i config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml
-	cp -i config_examples/variables.xml_distro /srv/vscp/variables.xml
-	cp -i config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
-	echo "Your VSCP & Friends system is now installed"
+	ifeq (,$(wildcard /etc/vscp/mimetypes.xml))
+	@read -p "Shall the mimetypes.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml; fi;
+	endif
+	@read -p "Shall the variables.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /srv/vscp/variables.xml; fi;
+	@read -p "Shall the dm.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /srv/vscp/dm.xml; fi;
+	@read -p "Shall default web content be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then cp -r config_examples/web/* /srv/vscp/web/; fi;
+	@echo
+	@echo
+	@echo "Your VSCP & Friends system is now installed."
+	@echo "============================================"
+	@echo
+	@echo " - Start the VSCP daemon with 'sudo /etc/init.d/vscpd start'"
+	@echo "   or 'vscpd -s' to start the daemon in the  foreground."
+	@echo
+	@echo " - Admin interface is at http://localhost:8080/vscp"	
+	@echo
+	@echo " - If you have installed the sample content it is located at"
+	@echo "   http://localhost:8080. Remember to change the ip address"
+	@echo "   in the file /srv/vscp/web/testws/settings.js to your local"
+	@echo "   ip address ($(IPADDRESS)) to be able to access this content from other "
+	@echo "   machines than your local machine."	
+	@echo
+	@echo " - You can reach core functionality in the telnet interface on"	
+	@echo "   this machine at port 9598. Username: admin, Password: secret"
+	@echo
+	@echo " - The configuration file for the VSCP daemon is at /etc/vscd/vscpd.conf and"
+	@echo "   you can read about the different available options here "
+	@echo "   http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon"
+	@echo	
+	@echo " - Documentation is at http://www.vscp.org/docs/vscpd/doku.php asd more general"
+	@echo "   documentation is at http://www.vscp.org/docs"
+	@echo
+	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
+	@echo "   around be foolish - stay hungry! There is always a choice."
+
