--- a/Makefile.in
+++ b/Makefile.in
@@ -17,9 +17,9 @@ clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
 
 install:
-#	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
-#	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
-#	lsb_release -i
+	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
+	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
+	lsb_release -i
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
@@ -30,13 +30,28 @@ install:
 	mkdir -p /var/logs/vscp
 	mkdir -p /srv/vscp/tables
 	mkdir -p /etc/vscp
+# startup script	
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
-	ifeq (,$(wildcard /etc/vscp/mimetypes.xml))
+# mimetypes
+ifneq ("$(wildcard /etc/vscp/mimetypes.xml)","")
 	@read -p "Shall the mimetypes.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml; fi;
-	endif
+else
+	$(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml
+endif
+# variables
+ifneq ("$(wildcard /srv/vscp/variables.xml)","")
 	@read -p "Shall the variables.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /srv/vscp/variables.xml; fi;
+else
+	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /srv/vscp/variables.xml
+endif
+# decision matrix
+ifneq ("$(wildcard /srv/vscp/dm.xml)","")
 	@read -p "Shall the dm.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /srv/vscp/dm.xml; fi;
+else
+	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /srv/vscp/dm.xml
+endif	
+# Web content
 	@read -p "Shall default web content be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then cp -r config_examples/web/* /srv/vscp/web/; fi;
 	@echo
 	@echo
