--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,7 @@ clean:
 install:
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
-	lsb_release -i
+#	lsb_release -i
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
