--- a/Makefile.in
+++ b/Makefile.in
@@ -33,6 +33,12 @@ install:
 # startup script	
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
+# vscpd config file
+ifneq ("$(wildcard /etc/vscp/vscpd.conf)","")
+	@read -p "Shall the default vscpd.conf file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf; fi;
+else
+	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
+endif
 # mimetypes
 ifneq ("$(wildcard /etc/vscp/mimetypes.xml)","")
 	@read -p "Shall the mimetypes.xml file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml; fi;
