--- a/src/vscp/drivers/level2/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level2/socketcan/linux/Makefile.in
@@ -61,10 +61,10 @@ ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
 
 ### Targets: ###
 
-all: vscp2drv_socketcan.so test
+all: vscpl2drv_socketcan.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscp2drv_socketcan.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl2drv_socketcan.so $(libdir)
 
 uninstall: 
 
@@ -77,7 +77,7 @@ clean:
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscp2drv_socketcan.so
+	rm -f vscpl2drv_socketcan.so
 	rm -f test
 
 distclean: clean
@@ -89,7 +89,7 @@ test:  test.o $(PROJOBJS)
 
 # Build the Linux DL
 %.so: %.o $(SOCKETCAN_OBJECTS)
-	$(CXX) -o $@ vscp2drv_socketcan.o $(SOCKETCAN_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+	$(CXX) -o $@ vscpl2drv_socketcan.o $(SOCKETCAN_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
 $(ALWAYS_BUILD):  .FORCE
 
