--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -41,7 +41,7 @@ MQTT_OBJECTS = mqtt.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
-	../../../../../common/net_skeleton.o\
+	../../../../../common/fossa.o\
 
 	
 PROJOBJS =  mqtt.o\
@@ -50,14 +50,14 @@ PROJOBJS =  mqtt.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
-	../../../../../common/net_skeleton.o\
+	../../../../../common/fossa.o\
 
 ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 	../../../../common/vscphelper.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
-	../../../../../common/net_skeleton.o\
+	../../../../../common/fossa.o\
 
 ### Targets: ###
 
